--- a/App/FEKC/app/src/main/AndroidManifest.xml
+++ b/App/FEKC/app/src/main/AndroidManifest.xml
@@ -25,6 +25,11 @@
             android:label="@string/app_name"
             android:theme="@android:style/Theme.Translucent.NoTitleBar" />
 
+        <activity
+            android:name=".activity.NavActivity"
+            android:label="@string/title_activity_nav"
+            android:theme="@style/AppTheme" />
+
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/facebook_app_id" />
