--- a/App/FEKC/app/src/main/AndroidManifest.xml
+++ b/App/FEKC/app/src/main/AndroidManifest.xml
@@ -34,6 +34,7 @@
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/facebook_app_id" />
 
+        <activity android:name=".activity.AppListActivity" />
 
         <receiver
             android:name="com.google.android.gms.gcm.GcmReceiver"
