--- a/App/FEKC/app/build.gradle
+++ b/App/FEKC/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.1"
+    buildToolsVersion "23.0.3"
 
     defaultConfig {
         applicationId "com.example.shiv.fekc"
@@ -25,21 +25,21 @@ dependencies {
 
     testCompile 'junit:junit:4.12'
 
+
+
+
+
+
     compile 'de.hdodenhof:circleimageview:2.0.0'
-
-    compile 'com.android.support:appcompat-v7:23.2.1'
-    compile 'com.android.support:recyclerview-v7:23.2.1'
-    compile 'com.android.support:design:23.2.1'
-
+    compile 'com.android.support:appcompat-v7:24.0.0-alpha1'
+    compile 'com.android.support:recyclerview-v7:24.0.0-alpha1'
+    compile 'com.android.support:design:24.0.0-alpha1'
     compile 'com.google.code.gson:gson:2.5'
-    compile "com.google.android.gms:play-services-gcm:8.3.0"
-
+    compile 'com.google.android.gms:play-services-gcm:8.4.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.squareup.retrofit:retrofit:1.9.0'
     compile 'com.squareup.okhttp:okhttp:2.7.2'
-
     compile 'joda-time:joda-time:2.3'
-
     compile 'com.facebook.android:facebook-android-sdk:4.+'
-    compile 'com.android.support:support-v4:23.2.1'
+    compile 'com.android.support:support-v4:24.0.0-alpha1'
 }
