--- a/App/FEKC/app/build.gradle
+++ b/App/FEKC/app/build.gradle
@@ -42,4 +42,8 @@ dependencies {
 
     compile 'com.facebook.android:facebook-android-sdk:4.+'
     compile 'com.android.support:support-v4:23.2.1'
+
+    compile 'com.android.support:appcompat-v7:22.0.0'
+    compile 'com.android.support:cardview-v7:22.0.0'
+    compile 'com.android.support:recyclerview-v7:22.0.0'
 }
