--- a/App/FEKC/app/build.gradle
+++ b/App/FEKC/app/build.gradle
@@ -43,7 +43,8 @@ dependencies {
     compile 'com.facebook.android:facebook-android-sdk:4.+'
     compile 'com.android.support:support-v4:23.2.1'
 
-    compile 'com.android.support:appcompat-v7:22.0.0'
-    compile 'com.android.support:cardview-v7:22.0.0'
-    compile 'com.android.support:recyclerview-v7:22.0.0'
+    compile 'com.android.support:appcompat-v7:23.0.0'
+    compile 'com.android.support:cardview-v7:23.0.0'
+
+    compile 'com.github.PhilJay:MPAndroidChart:v2.2.4'
 }
