--- a/App/FEKC/app/build.gradle
+++ b/App/FEKC/app/build.gradle
@@ -20,6 +20,10 @@ android {
     }
 }
 
+repositories{
+    maven { url "https://jitpack.io" }
+}
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
 
@@ -47,4 +51,5 @@ dependencies {
     compile 'com.android.support:cardview-v7:23.0.0'
 
     compile 'com.github.PhilJay:MPAndroidChart:v2.2.4'
+    compile 'com.github.bmarrdev:android-DecoView-charting:v0.9.3'
 }
