--- a/App/FEKC/app/src/main/AndroidManifest.xml
+++ b/App/FEKC/app/src/main/AndroidManifest.xml
@@ -54,7 +54,8 @@
             android:name=".activity.NavActivity"
             android:label="@string/title_activity_nav"
             android:theme="@style/AppTheme"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateVisible|adjustPan"/>
 
         <receiver
             android:name="com.google.android.gms.gcm.GcmReceiver"
