--- a/App/FEKC/app/src/main/AndroidManifest.xml
+++ b/App/FEKC/app/src/main/AndroidManifest.xml
@@ -55,7 +55,7 @@
             android:label="@string/title_activity_nav"
             android:theme="@style/AppTheme"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="stateVisible|adjustPan"/>
+            android:windowSoftInputMode="adjustPan|stateHidden"/>
 
         <receiver
             android:name="com.google.android.gms.gcm.GcmReceiver"
